nicer look and feel

--- a/ckanext/apihelper/templates/apihelper/snippets/form_action_list.html
+++ b/ckanext/apihelper/templates/apihelper/snippets/form_action_list.html
@@ -1,7 +1,7 @@
 <div class="control-group">
   <label class="control-label" for="field-actions">{{ _("Actions") }}</label>
   <div class="controls">
-    <select id="field-actions" name="actions" data-module="autocomplete apihelper">
+    <select id="field-actions" class="form-control" name="actions" data-module="autocomplete apihelper">
       <option value="">Select an action</option>
       {% for a, d in h.apihelper_action_list(action) | dictsort %}
       <option value="{{ a }}">{{ a }}</option>
@@ -9,4 +9,3 @@
     </select>
   </div>
 </div>
-
